--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -730,6 +730,44 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Chip Gallery
+--------------------------------------------------------------*/
+
+.chip {
+  display: flex;
+  padding: 0 150px;
+  gap: 20px;
+}
+
+.chip img {
+  height: 250px;
+}
+
+.chip-desc {
+  display: flex;
+  flex-direction: column;
+}
+
+.chip .btn-get-started {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 3px;
+  transition: 0.5s;
+  margin-top: 30px;
+  color: #fff;
+  background: #b31b1b;
+  width: fit-content;
+}
+
+.chip .btn-get-started:hover {
+  background: #de2424;
+}
+
+/*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
 .about h3 {
