removed border radius

--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -1343,13 +1343,6 @@ section {
   margin: 0;
 }
 
-.title-divider {
-  height: 3px;
-  background-color: #8b0000;
-  margin: 15px auto;
-  width: 100%;
-}
-
 .inner-page {
   text-align: center;
   margin-bottom: 40px;
@@ -1389,7 +1382,7 @@ section {
 
 .alumni-card {
   background-color: white;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 20px;
