--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -764,7 +764,7 @@ section {
   align-items: center;
   justify-content: center;
   padding: 1.5rem;
-  background-color: #f8f9fa;
+  background-color: white;
   border-right: 1px solid #eee;
 }
 
